--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,8 +1,30 @@
 .container-fluid {
     background-color: #1A1A1A;}
 
+.header {
+    max-width: calc(100% - 200px);
+    margin: 0 auto;
+}
+
+.icon svg {
+    color: #FFD11A;
+    width: 50px;
+    height: 50px;
+}
+
+.logo_Text {
+    color: #FFFFFF;
+    margin-left: 5px;
+    font-family: "Sansation", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
 .nav-link {
     color: #7E7E81;
+    font-family: "Sansation", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 .nav-link:hover {
@@ -13,4 +35,14 @@
     background-color: #141414 !important;
     color: #FFFFFF !important;
     border: 1px solid #333333 !important;
+}
+
+.active:hover {
+    background-color: #FFD11A !important;
+    color:  #141414!important;
+    border: 1px solid #333333 !important;
+}
+
+.btn {
+    width: 137px !important;
 }
