--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/layout/header.css">
+    <link rel="stylesheet" href="styles/layout/footer.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Kumbh+Sans:wght,YOPQ@100..900,300&family=Sansation&display=swap" rel="stylesheet">
     <title>Write Hub</title>
 </head>
 <body>
-<div class="container-fluid">
+<div class="container-fluid container_header">
     <header class="d-flex flex-wrap justify-content-between py-3 mb-4 header">
         <div class="icon d-flex align-items-center">
             <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 50 50" fill="currentColor">
