Add no-style features section

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,2 +1,15 @@
 <%- include("partials/header.ejs") %>
+<div class="blog_block">
+  <h1>Explore Blogs</h1>
+  <div>
+    Discover and search through a wide collection of blogs from different
+    creators.
+  </div>
+</div>
+<div class="create_block">
+  <h1>Create & Share</h1>
+  <div>
+    Write, edit, and publish your own blogs to share your ideas with the world.
+  </div>
+</div>
 <%- include("partials/footer.ejs") %>
