--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,15 +1,32 @@
 <%- include("partials/header.ejs") %>
 <div class="blog_block">
   <h1>Explore Blogs</h1>
-  <div>
+  <h6>
     Discover and search through a wide collection of blogs from different
     creators.
+  </h6>
+  <div class="number">
+    300
+    <span class="plus">+</span>
+    <div class="info">Blogs available</div>
+  </div>
+
+  <div class="number">
+    12k
+    <span class="plus">+</span>
+    <div class="info">Total downloads</div>
+  </div>
+
+  <div class="number">
+    1k
+    <span class="plus">+</span>
+    <div class="info">Users online</div>
   </div>
 </div>
 <div class="create_block">
   <h1>Create & Share</h1>
-  <div>
+  <h6>
     Write, edit, and publish your own blogs to share your ideas with the world.
-  </div>
+  </h6>
 </div>
 <%- include("partials/footer.ejs") %>
