--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -27,8 +27,48 @@ body {
 body {
   display: flex;
   flex-direction: column;
+  min-height: 100vh !important;
+  justify-content: space-between;
+  background-color: #1a1a1a;
 }
 
-main {
-  flex: 1;
+main h1 {
+  margin-top: 50px;
+  color: #ffffff;
+  font-family: "Sansation", sans-serif;
+  font-weight: 600;
+  font-style: normal;
+  margin-left: 100px;
+}
+
+main h6 {
+  color: #7e7e81;
+  font-family: "Sansation", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  margin-left: 100px;
+}
+
+.create_block {
+  margin-bottom: 500px;
+}
+
+.number {
+  display: inline-block;
+  margin-left: 100px;
+  color: #ffffff;
+  font-size: 40px;
+  font-weight: 600;
+  font-style: normal;
+  margin-left: 100px;
+}
+
+.plus {
+  color: #ffd11a;
+}
+
+.info {
+  color: #98989a;
+  font-size: 15px;
+  font-weight: 400;
 }
