Adjust footer position

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <div class="container-fluid footer_container">
-     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4">
+     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3">
         <div class="footer-line"></div>
         <p class="col-md-4 mb-0 text-body-secondary copyright_line">© <%= new Date().getFullYear()%> WriteHub, Inc</p>
     </footer>
