--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -50,7 +50,7 @@ main h6 {
 }
 
 .create_block {
-  margin-bottom: 30vh;
+  margin-bottom: 25vh;
 }
 
 .number {
@@ -62,6 +62,9 @@ main h6 {
   font-style: normal;
   margin-left: 100px;
 }
+.create_text {
+  display: inline-block;
+}
 
 .plus {
   color: #ffd11a;
@@ -71,4 +74,39 @@ main h6 {
   color: #98989a;
   font-size: 15px;
   font-weight: 400;
+}
+
+.btn_info {
+  display: inline-flex;
+  color: #7e7e81;
+  font-family: "Sansation", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  border: 1px solid #262626;
+}
+
+.btn_info:hover {
+  background-color: #ffd11a;
+  color: #141414;
+  border: 1px solid #333333;
+}
+
+.btn_explore {
+  margin-left: 41%;
+  margin-bottom: 80px;
+}
+
+.btn_create {
+  margin-left: 40%;
+  margin-bottom: 10px;
+}
+
+svg {
+  margin-left: 3px;
+  margin-top: 3px;
+  color: #ffd11a;
+}
+
+.btn_info:hover svg {
+  color: #141414;
 }
